@@ -1,3 +1,8 @@
+2013-12-21	Stephan Linz <linz@li-pro.net>
+
+	* common: install optimized libraries from mutilib toolchain
+		  overlay install make rules from ptxdist-2012.10.0
+
 2013-12-19	Stephan Linz <linz@li-pro.net>
 
 	* common: HOWTO: add reference note to the right GNU toolchain
